sites table added; db was changed on pg; filers halooglasi corrected; sqlite with password, addfilter dialog clearing, refactoring; clear screen after edit filter; clear screen after commands; refactoring; edit command visualisation changed; tests; added halooglasi and nekretnin; refactoring - removed mongo dependency and classes; added 4zida processing; removefilter command added; build structure builder corrected; multiple property type support; editfilter command added; refactoring; cityexp logic with checking of repeated flats. no border case testing;